--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
-<head>
-<script language="javascript">
-alert("Hi there, and welcome.")
-</script>
-</head>
-<body>
-</body>
+    <head>
+        <script defer type="text/javascript" src="src/create_field.js"></script>
+        <link rel="stylesheet" href="src/style.css">
+    </head>
+    <body>
+        <div id="MineField"></div>
+    </body>
 </html>
