create minefield, generate mines

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <html>
 <head>
-<script language="javascript">
-alert("Hi there, and welcome.")
+<script src="scr/create_field.js">
 </script>
 </head>
 <body>
