--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
         <link rel="stylesheet" href="src/style.css">
     </head>
     <body>
+        <div id="minesweeper">
+        <div id="info">
+            <div id="score">000</div>
+            <img id="reset" src="img/"></img>
+            <div id="time">000</div>
+        </div>
         <div id="MineField"></div>
+        </div>
+        </div>
     </body>
 </html>
