--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <html>
     <head>
         <script defer type="text/javascript" src="src/create_field.js"></script>
+        <script defer type="text/javascript" src="src/timer.js"></script>
         <link rel="stylesheet" href="src/style.css">
     </head>
     <body>
         <div id="MineField"></div>
+        <p id="Timer"></p>
     </body>
 </html>
