change how timer works

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <div id="info">
             <div id="score">000</div>
             <img id="reset" src="img/"></img>
-            <div id="Timer">000</div>
+            <div id="time">000</div>
         </div>
         <div id="MineField"></div>
         </div>
