--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
         <script defer type="text/javascript" src="src/create_field.js"></script>
         <script defer type="text/javascript" src="src/timer.js"></script>
+        <script defer type="text/javascript" src="src/gameplay.js"></script>
         <link rel="stylesheet" href="src/style.css">
     </head>
     <body>
