--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <html>
     <head>
         <script defer type="text/javascript" src="src/create_field.js"></script>
-        <script defer type="text/javascript" src="src/timer.js"></script>
+        <script defer type="text/javascript" src="src/gui.js"></script>
         <script defer type="text/javascript" src="src/gameplay.js"></script>
         <link rel="stylesheet" href="src/style.css">
     </head>
     <body>
         <div id="minesweeper">
         <div id="info">
-            <div id="score">000</div>
+            <div id="mines_left">000</div>
             <img id="reset" src="img/"></img>
             <div id="time">000</div>
         </div>
