--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <script defer type="text/javascript" src="src/hint.js"></script>
         <script defer type="text/javascript" src="src/gui.js"></script>
         <script defer type="text/javascript" src="src/create_field.js"></script>
         <script defer type="text/javascript" src="src/gameplay.js"></script>
