--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <div id="submit" class="button">Change</div>
             </div>
         </div>
-
+        <button onclick="HelpFunction()">Help pls</button>
         </div>
     </body>
 </html>
