UI now done (only css) [or so I hope]

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <div id="minesweeper">
             <div id="edit" class="button">Edit</div>
             <div id="controls">
-                <div><label>Width: </label><input type="number" min="1" max="100" id="field_width"></div>
-                <div><label>Height: </label><input type="number" min="1" max="100" id="field_height"></div>
-                <div><label>Mines: </label><input type="number" min="0" id="field_mines"></div>
+                <div class="settings"><label>Width: </label><input type="number" min="1" max="100" id="field_width"></div>
+                <div class="settings"><label>Height: </label><input type="number" min="1" max="100" id="field_height"></div>
+                <div class="settings"><label>Mines: </label><input type="number" min="0" id="field_mines"></div>
                 <div id="submit" class="button">Change</div>
             </div>
             <div id="info">
