UI update (again), added help button css

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                 <div>You managed to find all bombs in ... on map ...</div>
                 <div>Your best score was ... for this map</div>
             </div>
+            <div id="help" class="button">Help</div>
         </div>
-        <button onclick="HelpFunction()">Help pls</button>
         </div>
     </body>
 </html>
