ui edit, you can now see that you won

--- a/index.html
+++ b/index.html
@@ -28,12 +28,11 @@
                 </div>
             </div>
             <div id="MineField"></div>
-            <div id="ScoreField">
-                <div>You managed to find all bombs in ... on map ...</div>
-                <div>Your best score was ... for this map</div>
-            </div>
             <div id="help" class="button">Help</div>
         </div>
-        </div>
+    </div>
+    <div id="ScoreField">
+        <div>You WON!! <br><br>Time: <span id="end_time"></span><br>Map: <span id="end_map"></span></div>
+    </div>
     </body>
 </html>
