--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
     </div>
     <div id="ScoreField">
-        <div>You WON!! <br><br>Time: <span id="end_time"></span><br>Map: <span id="end_map"></span></div>
+        <div>You WON!! <br><br>Time: <span id="end_time"></span>s<br>Map: <span id="end_map"></span></div>
     </div>
     </body>
 </html>
